objects/TW1_Sala__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Entretenimento__c</fullName>
        <label>Entretenimento</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>TW1_Entretenimento__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Cinema</value>
            </filterItems>
            <filterItems>
                <field>TW1_Entretenimento__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Teatro</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TW1_Entretenimento__c</referenceTo>
        <relationshipLabel>Salas</relationshipLabel>
        <relationshipName>Salas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TW1_Numero_de_Lugares__c</fullName>
        <label>Número de Lugares</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <formula>TW1_Entretenimento__r.TW1_Shopping__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shopping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Tipo__c</fullName>
        <label>Tipo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Sala</label>
    <nameField>
        <label>Nome da Sala</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>